[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/ui/OptionButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/ui/DefaultTheme.theme" type="Theme" id=2]
[ext_resource path="res://source/ui/AnswerOptions.gd" type="Script" id=3]

[node name="AnswerOptions" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -242.0
theme = ExtResource( 2 )
custom_constants/margin_right = 200
custom_constants/margin_top = 25
custom_constants/margin_left = 200
custom_constants/margin_bottom = 25
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 200.0
margin_top = 25.0
margin_right = 824.0
margin_bottom = 217.0
custom_constants/separation = 20

[node name="Question" type="Label" parent="VBoxContainer"]
margin_right = 624.0
margin_bottom = 24.0
text = "Question????"

[node name="HBoxContainerTop" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 624.0
margin_bottom = 108.0
custom_constants/separation = 20

[node name="OptionButton1" parent="VBoxContainer/HBoxContainerTop" instance=ExtResource( 1 )]
margin_right = 302.0
size_flags_horizontal = 3
option_text = "clicked option a"

[node name="OptionButton2" parent="VBoxContainer/HBoxContainerTop" instance=ExtResource( 1 )]
margin_left = 322.0
margin_right = 624.0
size_flags_horizontal = 3
option_label = "B"
option_text = "clicked option B"

[node name="HBoxContainerBottom" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 624.0
margin_bottom = 192.0
custom_constants/separation = 20

[node name="OptionButton3" parent="VBoxContainer/HBoxContainerBottom" instance=ExtResource( 1 )]
margin_right = 302.0
size_flags_horizontal = 3
option_label = "C"
option_text = "clicked option C"

[node name="OptionButton4" parent="VBoxContainer/HBoxContainerBottom" instance=ExtResource( 1 )]
margin_left = 322.0
margin_right = 624.0
size_flags_horizontal = 3
option_label = "D"
option_text = "clicked option D"
